--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.davidburgosprieto.android.androidflavorsexample"
+        applicationId "com.example.android.flavorsexample"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -13,25 +13,23 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
-    // Specifies the flavor dimensions you want to use. The order in which you
-    // list each dimension determines its priority, from highest to lowest,
-    // when Gradle merges variant sources and configurations. You must assign
-    // each product flavor you configure to one of the flavor dimensions.
-    flavorDimensions "adnetwork"
-
+    flavorDimensions "adnetworkApp"
     productFlavors {
-        adcolony {
-            dimension "adnetwork"
+        adcolonyApp {
+            dimension "adnetworkApp"
+            applicationId "com.example.android.flavorsexample.adcolonyApp"
         }
-        admob {
-            dimension "adnetwork"
+        admobApp {
+            dimension "adnetworkApp"
+            applicationId "com.example.android.flavorsexample.admobApp"
         }
-        fbaudience {
-            dimension "adnetwork"
+        fbaudienceApp {
+            dimension "adnetworkApp"
+            applicationId "com.example.android.flavorsexample.fbaudienceApp"
         }
     }
 }
@@ -40,25 +38,23 @@ ext {
     supportVersion = '28.0.0'
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+configurations {
+    adcolonyAppReleaseImplementation
+    admobAppReleaseImplementation
+    fbaudienceAppReleaseImplementation
+}
 
+dependencies {
+    adcolonyAppReleaseImplementation project(path: ':flavorslibrary', configuration: 'adcolonyRelease')
+    admobAppReleaseImplementation project(path: ':flavorslibrary', configuration: 'admobRelease')
+    fbaudienceAppImplementation project(path: ':flavorslibrary', configuration: 'fbaudienceRelease')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:" + supportVersion
     implementation "com.android.support:cardview-v7:" + supportVersion
     implementation "com.android.support:recyclerview-v7:" + supportVersion
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    // AdMob
-    implementation 'com.google.android.gms:play-services-ads:17.1.1'
-
-    // AdColony
-    implementation 'com.adcolony:sdk:3.3.8'
-    implementation 'com.google.android.gms:play-services-ads-identifier:16.0.0'
-
-    // FBAudience
-    implementation 'com.facebook.android:audience-network-sdk:5.+'
+    implementation project(path: ':flavorslibrary', configuration: 'default')
 }
