--- a/flavorslibrary/build.gradle
+++ b/flavorslibrary/build.gradle
@@ -16,14 +16,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 
-    // Specifies the flavor dimensions you want to use. The order in which you
-    // list each dimension determines its priority, from highest to lowest,
-    // when Gradle merges variant sources and configurations. You must assign
-    // each product flavor you configure to one of the flavor dimensions.
     flavorDimensions "adnetwork"
-
     productFlavors {
         adcolony {
             dimension "adnetwork"
@@ -38,17 +37,20 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     // AdMob
     admobImplementation 'com.google.android.gms:play-services-ads:17.1.1'
+
     // AdColony
     adcolonyImplementation 'com.adcolony:sdk:3.3.8'
     adcolonyImplementation 'com.google.android.gms:play-services-ads-identifier:16.0.0'
+
     // FBAudience
     fbaudienceImplementation 'com.facebook.android:audience-network-sdk:5.+'
 }
